--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: MinecraftLayer
 version: 1.0-SNAPSHOT
 main: il.co.biosignals.minecraftlayer.MinecraftLayer
 api-version: 1.19
+depend: [DecentHolograms]
