Touched things up, fixed some bugs, this is the final version before testing on a larger scale

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
 group 'il.co.biosignals'
 version '1.0-SNAPSHOT'
 
+setArchivesBaseName("BioSignals-MinecraftLayer")
+
 repositories {
     mavenCentral()
 
