Fixed more bugs, added test server data mode, added delaying the first sound until the resource pack is loaded.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,10 +6,17 @@ depend: [DecentHolograms]
 commands:
   biosignals:
     description: The main command for biosignals.
-    usage: /<command>
+    usage: /<command> [uuid]
     permission: biosignals.biosignals_command
+    permission-message: Permission denied.
 permissions:
   biosignals.all:
     children:
       biosignals.biosignals_command:
-        default: true;
+        default: true
+      biosignals.biosignals_command.all:
+        children:
+          biosignals.biosignals_command.uuid:
+            default: true
+          biosignals.biosignals_command.test:
+            default: op
